# scid-up

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  COPYING  ChangeLog  InnoSetup.iss  Makefile.conf  README.md  azure-pipelines.yml  build_app.sh  configure
.github/workflows/: ci.yml  release.yml
cmake/: general.cmake  lint.cmake  packaging.cmake  scidup_release.h.in  tests.cmake
cmake/bins/: main.cmake
cmake/install/: main.cmake  tcl-tk.cmake
cmake/libs/: polyglot.cmake  tcl.cmake  threads.cmake
cmake/package/: cpack.cmake  portable.cmake
cmake/package/portable/: bundle-tcl-tk.cmake  layout.cmake  macos.cmake  windows.cmake
cmake/package/portable/macos/: all.cmake  fix-dylib-install-name.cmake.in
cmake/package/portable/readme/: README-linux.txt.in  README-macos.txt.in  README-windows.txt.in  all.cmake
cmake/tests/: all.cmake  cpptest.cmake  portable-archive-smoke-test.cmake  portable.cmake  tcl.cmake
cmake/tests/tcl/: bridge.cmake  common.cmake  gui.cmake  unit.cmake
cmake/tools/: lint.cmake
flatpak/: io.github.benini.scid.yml
gtest/: CMakeLists.txt  test_game.cpp  test_pgnparser.cpp  test_sortcache.cpp
help/: Menus.html  Options.html
resources/help/: Analysis.html  Export.html
resources/scripts/: convert_marker.py  convert_marker.tcl  sc_eco.tcl  sc_epgn.tcl  sc_remote.tk  scidpgn.tcl  spliteco.tcl  tbstats.tcl
resources/win/: scid-up.rc
scripts/: convert_marker.tcl  filter_spellcheck_file.tcl  sc_import.tcl  sc_spell.tcl
src/: engine.cpp  engine.h  game.cpp  game.h  sc_base.cpp  scidup_tcl_bindings.cpp  scidup_tcl_bindings.h  textbuf.cpp  tkscid.cpp  ui_tcltk.h
src/cxx/: common.h  crosstab.cpp  dbasepool.cpp  dstring.h  engine.h  optable.cpp  position.cpp  position.h  scidup_tcl_bindings.cpp  ui_tcltk.h
src/cxx/polyglot/: san.cpp
src/polyglot/: book.cpp
src/tcl/: board.tcl  end.tcl  enginecfg.tcl  enginecomm.tcl  errors.tcl  game.tcl  htext.tcl  language.tcl  main.tcl  misc.tcl  move.tcl  options.tcl  start.tcl  utils.tcl  windows.tcl
src/tcl/file/: bookmark.tcl  finder.tcl  maint.tcl  recent.tcl  spellchk.tcl
src/tcl/help/: help.tcl
src/tcl/lang/: catalan.tcl  english.tcl  greek.tcl  italian.tcl  nederlan.tcl  norsk.tcl  portbr.tcl  russian.tcl  serbian.tcl  spanish.tcl  suomi.tcl  swedish.tcl
src/tcl/scidup/: dirs.tcl  updates.tcl
src/tcl/search/: board.tcl  header.tcl  material.tcl
src/tcl/tests/: edit.test
src/tcl/tests/file/: maint.test
src/tcl/tools/: analysis.tcl  graphs.tcl  import.tcl  inputengine.tcl  novag.tcl  optable.tcl  pinfo.tcl  preport.tcl  reviewgame.tcl
src/tcl/utils/: date.tcl  graph.tcl  history.tcl  sound.tcl  string.tcl  tklib_tooltip.tcl  validate.tcl  win.tcl
src/tcl/windows/: book.tcl  browser.tcl  crosstab.tcl  engine.tcl  switcher.tcl  tourney.tcl  tree.tcl
src/tools/check-newer-release/: script.ps1  script.sh
tcl/: board.tcl  edit.tcl  end.tcl  enginecfg.tcl  enginecomm.tcl  file.tcl  game.tcl  htext.tcl  keyboard.tcl  main.tcl  menus.tcl  misc.tcl  move.tcl  options.tcl  start.tcl  utils.tcl  windows.tcl
tcl/file/: bookmark.tcl  finder.tcl  maint.tcl  recent.tcl  spellchk.tcl
tcl/help/: help.tcl  tips.tcl
tcl/lang/: czech.tcl  deutsch.tcl  francais.tcl  hungary.tcl  polish.tcl  propagatelang.tcl
tcl/scidup/: dirs.tcl
tcl/search/: board.tcl  header.tcl  material.tcl  search.tcl
tcl/tests/: board.test  dirs.test  end.test  enginecfg.test  enginecomm.test  file.test  game.test  menus.test  misc.test  move.test  run_all_tests.tcl  run_one_test.tcl  utils.test
tcl/tests/_support/: scid_test_mocks.tcl  scid_test_paths.tcl  scid_test_stubs.tcl  scid_test_widgets.tcl  support.tcl
tcl/tests/file/: bookmark.test  finder.test  maint.test  recent.test  spellchk.test
tcl/tests/search/: header.test  material.test
tcl/tests/tools/: analysis.test  calvar.test  fics.test  graphs.test  import.test  inputengine.test  opening.test  optable.test  ptracker.test  reviewgame.test
tcl/tests/utils/: font.test  history.test  sound.test  tklib_tooltip.test  win.test
tcl/tests/windows/: book.test  browser.test  comment.test  crosstab.test  engine.test  gamelist.test  pfinder.test  pgn.test  preferences.test  stats.test
tcl/tools/: analysis.tcl  calvar.tcl  fics.tcl  graphs.tcl  import.tcl  inputengine.tcl  novag.tcl  opening.tcl  optable.tcl  pinfo.tcl  preport.tcl  ptracker.tcl  reviewgame.tcl  sergame.tcl  tacgame.tcl  tactics.tcl  uci.tcl  wbdetect.tcl
tcl/utils/: date.tcl  font.tcl  graph.tcl  history.tcl  pane.tcl  sound.tcl  tklib_tooltip.tcl  validate.tcl  win.tcl
tcl/windows/: book.tcl  browser.tcl  comment.tcl  crosstab.tcl  eco.tcl  engine.tcl  gamelist.tcl  pfinder.tcl  pgn.tcl  preferences.tcl  stats.tcl  switcher.tcl  tourney.tcl  tree.tcl
tests/cxx/: test_dbasepool.cpp  test_filebuf.cpp  test_position.cpp
tests/tcl/: dirs.test  enginecfg.test  game.test  htext.test  main.test  options.test  run_all_tests.tcl  run_gui_tests.tcl  run_one_test.tcl  run_unit_tests.tcl  start.test  updates.test  windows.test
tests/tcl/_support/: scid_test_baseline_io.tcl  scid_test_menu_capture.tcl  scid_test_menu_structure.tcl  scid_test_paths.tcl  support.tcl
tests/tcl/file/: bookmark.test  recent.test
tests/tcl/integration/: sc_base_smoke.tcl  sc_filter_tree_state.tcl  sc_game_state.tcl
tests/tcl/lib/: scid_test_baseline_io.tcl  scid_test_menu_capture.tcl  scid_test_menu_spec_helpers.tcl  scid_test_menu_structure.tcl  scid_test_paths.tcl  scid_test_stubs.tcl  scid_test_widgets.tcl  support.tcl
tests/tcl/search/: search.test
tests/tcl/tools/: analysis.test  import.test  pinfo.test  preport.test  ptracker.test  reviewgame.test  uci.test
tests/tcl/unit/: board.test  dirs.test  edit.test  end.test  enginecfg.test  enginecomm.test  file.test  game.test  htext.test  main.test  menus.test  misc.test  move.test  options.test  start.test  updates.test  utils.test  windows.test
tests/tcl/utils/: date.test  graph.test  history.test  pane.test  sound.test  string.test  win.test
tests/tcl/windows/: eco.test  gamelist.test  pfinder.test  tourney.test  tree.test
(+196 files in other folders)
